# Deo-MIx

./: CMakeLists.txt  run_m1.command
lib/demucsonnx/: CMakeLists.txt  README.mixxx.md  demucs.hpp  model_apply.cpp  model_inference.cpp  tensor.hpp
res/qml/: EffectSlot.qml  WaveformDisplay.qml  main.qml
res/qml/Deo/: AudioMixerPanel.qml  BackspinSlot.qml  ChannelFader.qml  ChannelStrip.qml  Crossfader.qml  CuratedEffectsModel.qml  DeckOverviewWaveform.qml  DeckPanel.qml  DeckWaveform.qml  EffectMetaSlider.qml  EffectParametersRow.qml  FXRack.qml  JogWheel.qml  LoopSection.qml  MasterPanel.qml  MixerTabs.qml  MixerVuMeters.qml  PitchFader.qml  StemPads.qml  SyncButton.qml  TransportRow.qml
res/qml/Mixxx/: PlayerDropArea.qml
res/qml/Theme/: Theme.qml
src/effects/backends/audiounit/: audiounitbackend.mm
src/engine/controls/: ratecontrol.cpp  ratecontrol.h
src/qml/: qmllibraryproxy.cpp  qmllibraryproxy.h  qmllibrarysource.cpp  qmllibrarysource.h  qmllibrarytracklistmodel.cpp  qmllibrarytracklistmodel.h
src/stemsep/: CMakeLists.txt  stemsep_cli.cpp  wavio.cpp  wavio.h
